# blake3-smol

./: Cargo.toml
asm/blake3-avx2/: Cargo.toml
asm/blake3-avx2/src/: blake3_avx2_x86-64_unix.S  blake3_avx2_x86-64_unix_prepro.S  lib.rs
asm/blake3-avx512/: Cargo.toml
asm/blake3-avx512/src/: blake3_avx512_x86-64_unix.S  blake3_avx512_x86-64_unix_prepro.S  lib.rs
asm/blake3-sse2/: Cargo.toml
asm/blake3-sse2/src/: blake3_sse2_x86-64_unix.S  blake3_sse2_x86-64_unix_prepro.S  lib.rs
asm/blake3-sse41/: Cargo.toml
asm/blake3-sse41/src/: blake3_sse41_x86-64_unix.S  blake3_sse41_x86-64_unix_prepro.S  lib.rs
benches/: bench.rs
src/: lib.rs  platform.rs  test.rs
