[package]
name = "blake3-smol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constant_time_eq = "0.2.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
blake3-avx2 = { path = "./asm/blake3-avx2" }
blake3-avx512 = { path = "./asm/blake3-avx512" }
blake3-sse2 = { path = "./asm/blake3-sse2" }
blake3-sse41 = { path = "./asm/blake3-sse41" }

[dev-dependencies]
rand = "0.8.0"
rand_chacha = "0.3.0"
reference_impl = { path = "./reference_impl" }